--- a/DataFrames 1.ipynb
+++ b/DataFrames 1.ipynb
@@ -3108,6 +3108,599 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The .astype() Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>College</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Avery Bradley</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>6-2</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>7730337.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Jae Crowder</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>6-6</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>Marquette</td>\n",
+       "      <td>6796117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>John Holland</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>6-5</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>Boston University</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>R.J. Hunter</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>6-5</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>Georgia State</td>\n",
+       "      <td>1148640.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Jonas Jerebko</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>6-10</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5000000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Amir Johnson</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>6-9</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>12000000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name            Team  Number Position   Age Height  Weight  \\\n",
+       "0  Avery Bradley  Boston Celtics     0.0       PG  25.0    6-2   180.0   \n",
+       "1    Jae Crowder  Boston Celtics    99.0       SF  25.0    6-6   235.0   \n",
+       "2   John Holland  Boston Celtics    30.0       SG  27.0    6-5   205.0   \n",
+       "3    R.J. Hunter  Boston Celtics    28.0       SG  22.0    6-5   185.0   \n",
+       "4  Jonas Jerebko  Boston Celtics     8.0       PF  29.0   6-10   231.0   \n",
+       "5   Amir Johnson  Boston Celtics    90.0       PF  29.0    6-9   240.0   \n",
+       "\n",
+       "             College      Salary  \n",
+       "0              Texas   7730337.0  \n",
+       "1          Marquette   6796117.0  \n",
+       "2  Boston University         0.0  \n",
+       "3      Georgia State   1148640.0  \n",
+       "4               None   5000000.0  \n",
+       "5               None  12000000.0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba = pd.read_csv(\"nba.csv\").dropna(how=\"all\")\n",
+    "nba[\"Salary\"].fillna(0, inplace=True)\n",
+    "nba[\"College\"].fillna(\"None\", inplace=True)\n",
+    "nba.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 457 entries, 0 to 456\n",
+      "Data columns (total 9 columns):\n",
+      "Name        457 non-null object\n",
+      "Team        457 non-null object\n",
+      "Number      457 non-null float64\n",
+      "Position    457 non-null object\n",
+      "Age         457 non-null float64\n",
+      "Height      457 non-null object\n",
+      "Weight      457 non-null float64\n",
+      "College     457 non-null object\n",
+      "Salary      457 non-null float64\n",
+      "dtypes: float64(4), object(5)\n",
+      "memory usage: 35.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "nba.dtypes\n",
+    "\n",
+    "# Another way\n",
+    "nba.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>College</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Avery Bradley</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6-2</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>7730337.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Jae Crowder</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>99</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6-6</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>Marquette</td>\n",
+       "      <td>6796117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>John Holland</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>30</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>27</td>\n",
+       "      <td>6-5</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>Boston University</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name            Team  Number Position  Age Height  Weight  \\\n",
+       "0  Avery Bradley  Boston Celtics       0       PG   25    6-2   180.0   \n",
+       "1    Jae Crowder  Boston Celtics      99       SF   25    6-6   235.0   \n",
+       "2   John Holland  Boston Celtics      30       SG   27    6-5   205.0   \n",
+       "\n",
+       "             College     Salary  \n",
+       "0              Texas  7730337.0  \n",
+       "1          Marquette  6796117.0  \n",
+       "2  Boston University        0.0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba[\"Age\"] = nba[\"Age\"].astype(\"int\")\n",
+    "nba[\"Number\"] = nba[\"Number\"].astype(\"int\")\n",
+    "nba.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba[\"Position\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 457 entries, 0 to 456\n",
+      "Data columns (total 9 columns):\n",
+      "Name        457 non-null object\n",
+      "Team        457 non-null category\n",
+      "Number      457 non-null int64\n",
+      "Position    457 non-null category\n",
+      "Age         457 non-null int64\n",
+      "Height      457 non-null object\n",
+      "Weight      457 non-null float64\n",
+      "College     457 non-null object\n",
+      "Salary      457 non-null float64\n",
+      "dtypes: category(2), float64(2), int64(2), object(3)\n",
+      "memory usage: 31.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "nba[\"Position\"] = nba[\"Position\"].astype(\"category\")\n",
+    "nba[\"Team\"] = nba[\"Team\"].astype(\"category\")\n",
+    "\n",
+    "nba.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort a DataFrame with the .sort_values() Method, Part I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>College</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Avery Bradley</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>6-2</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>7730337.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Jae Crowder</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>6-6</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>Marquette</td>\n",
+       "      <td>6796117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>John Holland</td>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>6-5</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>Boston University</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name            Team  Number Position   Age Height  Weight  \\\n",
+       "0  Avery Bradley  Boston Celtics     0.0       PG  25.0    6-2   180.0   \n",
+       "1    Jae Crowder  Boston Celtics    99.0       SF  25.0    6-6   235.0   \n",
+       "2   John Holland  Boston Celtics    30.0       SG  27.0    6-5   205.0   \n",
+       "\n",
+       "             College     Salary  \n",
+       "0              Texas  7730337.0  \n",
+       "1          Marquette  6796117.0  \n",
+       "2  Boston University        NaN  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba = pd.read_csv(\"nba.csv\")\n",
+    "nba.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>College</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>152</td>\n",
+       "      <td>Aaron Brooks</td>\n",
+       "      <td>Chicago Bulls</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>6-0</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>2250000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>356</td>\n",
+       "      <td>Aaron Gordon</td>\n",
+       "      <td>Orlando Magic</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>6-9</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>4171680.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>328</td>\n",
+       "      <td>Aaron Harrison</td>\n",
+       "      <td>Charlotte Hornets</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6-6</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>525093.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Name               Team  Number Position   Age Height  Weight  \\\n",
+       "152    Aaron Brooks      Chicago Bulls     0.0       PG  31.0    6-0   161.0   \n",
+       "356    Aaron Gordon      Orlando Magic     0.0       PF  20.0    6-9   220.0   \n",
+       "328  Aaron Harrison  Charlotte Hornets     9.0       SG  21.0    6-6   210.0   \n",
+       "\n",
+       "      College     Salary  \n",
+       "152    Oregon  2250000.0  \n",
+       "356   Arizona  4171680.0  \n",
+       "328  Kentucky   525093.0  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba.sort_values(\"Age\", ascending=False)\n",
+    "\n",
+    "nba.sort_values(\"Salary\", ascending=False)\n",
+    "\n",
+    "nba.sort_values(\"Name\", ascending=True, inplace=True)\n",
+    "nba.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nba.sort_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
